// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`class > basic 1`] = `
"class Car:
"
`;

exports[`class > fields with annotation and initializer 1`] = `
"class Car:
    color: str = 'red'
"
`;
